--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -13,7 +13,7 @@
         <table>
           <tr>
             <td><img src="{relocatable: logo.png}" alt="Logo" title="Logo" /></td>
-            <td><h1>CommandParser<span style="font-size: 60%"> - an advanced command line parser using optparse which supports commands</span></h1>
+            <td><h1>CommandParser<span style="font-size: 60%"> - advanced command line parser which supports commands</span></h1>
             </td>
           </tr>
         </table>
