--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{lang:}">
   <head>
-    <title>CommandParser: {title:}</title>
+    <title>cmdparse: {title:}</title>
     <link href="{relocatable: default.css}" rel="stylesheet" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
@@ -13,7 +13,7 @@
         <table>
           <tr>
             <td><img src="{relocatable: logo.png}" alt="Logo" title="Logo" /></td>
-            <td><h1>CommandParser<span style="font-size: 60%"> - advanced command line parser which supports commands</span></h1>
+            <td><h1>cmdparse<span style="font-size: 60%"> - advanced command line parser which supports commands</span></h1>
             </td>
           </tr>
         </table>
