--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -20,7 +20,7 @@
       </div>
 
       <div id="headerbar" class="bar">
-        <span class="left">Navbar: {navbar: }</span>
+        <span class="left">Navbar: {breadcrumbTrail: }</span>
         <span class="right">Language: {langbar: }</span>
         <div style="clear:both"></div>
       </div>
