Updated documentation website
* Integrated API documentation
* New responsive website design
* Rearranged pages and information

--- a/webgen.config
+++ b/webgen.config
@@ -4,9 +4,13 @@ website.config['website.base_url'] = 'http://cmdparse.gettalong.org/'
 website.config['sources'] =[['/', :file_system, 'doc']]
 website.config['destination'] = [:file_system, 'htmldoc']
 website.config['website.tmpdir'] = 'webgen-tmp'
-website.config['content_processor.kramdown.options'] = {'coderay_line_numbers' => nil}
+website.config['content_processor.kramdown.options'] = {
+  syntax_highlighter: 'coderay',
+  syntax_highlighter_opts: {css: 'class', line_numbers: nil}
+}
+website.config['content_processor.sass.options'] = {:style => :compressed}
 
-website.config.define_option('tag.extract.file', 'net.rb')
+website.config.define_option('tag.extract.file', 'example/net.rb')
 website.config.define_option('tag.extract.lines', nil)
 
 website.ext.tag.register('extract', :config_prefix => 'tag.extract',
