Updated default template

--- a/doc/default.template
+++ b/doc/default.template
@@ -57,5 +57,18 @@
 
     </div>
 
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+      var sc_project=10338773;
+      var sc_invisible=1;
+      var sc_security="7779f3af";
+    </script>
+    <script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script>
+    <noscript><div class="statcounter">
+        <a title="free hit counters" href="http://statcounter.com/" class="statcounter">
+          <img class="statcounter" src="http://c.statcounter.com/10338773/0/7779f3af/1/" alt="free hit counters" />
+        </a>
+    </div></noscript>
+    <!-- End of StatCounter Code for Default Guide -->
   </body>
 </html>
