--- a/doc/default.template
+++ b/doc/default.template
@@ -62,13 +62,10 @@
       var sc_project=10338773;
       var sc_invisible=1;
       var sc_security="7779f3af";
+      var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+      document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
     </script>
-    <script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script>
-    <noscript><div class="statcounter">
-        <a title="free hit counters" href="http://statcounter.com/" class="statcounter">
-          <img class="statcounter" src="http://c.statcounter.com/10338773/0/7779f3af/1/" alt="free hit counters" />
-        </a>
-    </div></noscript>
+    <noscript><div class="statcounter"><a title="website statistics" href="http://statcounter.com/" target="_blank"><img class="statcounter" src="//c.statcounter.com/10338773/0/7779f3af/1/" alt="website statistics" /></a></div></noscript>
     <!-- End of StatCounter Code for Default Guide -->
   </body>
 </html>
