Disable cookies for analytics

--- a/doc/default.template
+++ b/doc/default.template
@@ -62,6 +62,7 @@
       var sc_project=10338773;
       var sc_invisible=1;
       var sc_security="7779f3af";
+      var sc_client_storage="disabled";
       var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
       document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
     </script>
