--- a/doc/default.template
+++ b/doc/default.template
@@ -63,9 +63,8 @@
       var sc_invisible=1;
       var sc_security="7779f3af";
       var sc_client_storage="disabled";
-      var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
-      document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
     </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async="async"></script>
     <noscript><div class="statcounter"><a title="website statistics" href="http://statcounter.com/" target="_blank"><img class="statcounter" src="//c.statcounter.com/10338773/0/7779f3af/1/" alt="website statistics" /></a></div></noscript>
     <!-- End of StatCounter Code for Default Guide -->
   </body>
