Update URLs to HTTPS

--- a/webgen.config
+++ b/webgen.config
@@ -1,6 +1,6 @@
 # -*- ruby -*-
 
-website.config['website.base_url'] = 'http://cmdparse.gettalong.org/'
+website.config['website.base_url'] = 'https://cmdparse.gettalong.org/'
 website.config['sources'] =[['/', :file_system, 'doc']]
 website.config['destination'] = [:file_system, 'htmldoc']
 website.config['website.tmpdir'] = 'webgen-tmp'
